# autonomous-trucking

./: .gitignore  CMakeLists.txt  Charlie  Charlie.pub  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  TruckClass.h  point2d.cpp  point2d.h  realm.cpp  realm.h  road.cpp  road.h  truck.cpp  truck.h  truckcontainer.cpp  truckcontainer.h
test/: CMakeLists.txt  test_road.cpp
